turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:10: error: type mismatch;
 found   : Int
 required: java.awt.Color
  setCouleurBrosse((ind + 1)%colors.length)
                            ^